<resources>
    <string name="app_name">AllergyAlert</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profiles">Profiles</string>
    <string name="menu_check_product">Check Product</string>

    <string name="profile_view_header_text">Profiles</string>

    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="home_button">Home</string>
    <string name="profile_image">Image of profile</string>

    <string name="scan_product_button">Scan</string>
    <string name="search_product_button">Search</string>

    <string name="add_profile_name_hint">Name</string>

    <string name="scan_product_now">Scan Product</string>

    <string name="product_information_header_text">Product Information</string>
    <string name="product_name_title">Product:  </string>
    <string name="alert_title">Alert:  </string>
    <string name="ingredients_title">Ingredients:  </string>
    <string name="allergens_detected_title_text">Allergens Detected:  </string>
    <string name="scan_new_button">Scan New Product</string>
    <string name="search_new_button">Search New Product</string>

    <string name="row_name_text">Name</string>

    <string name="add_prof_allergen">Add profile or allergen</string>
    <string-array name="allergens_strings_xml">
        <item>Peanuts</item>
        <item>Seafood</item>
    </string-array>

    <string-array name="test_profile">
        <item>James</item>
        <item>11/12/2000</item>
        <item>170</item>
        <item>78</item>
        <item>Carry an epipen with me always.</item>
        <item>Peanuts, Seafood</item>
    </string-array>

    <string name="scan_product_title">Scan Product</string>
    <string name="scan_product_text">Scan the barcode of a food product to receive
    information on contained allergens. To begin, click on SCAN PRODUCT to use
        camera to scan. Otherwise, click on HOME to exit Scan Product Mode.
    </string>
    
    <string name="search_product_title">Search Product</string>
</resources>