<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/blue"
    android:fontFamily="roboto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blue">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/food">

            </ImageView>

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/profile"></ImageView>
        </RelativeLayout>

    </LinearLayout>

        <TextView
            android:id="@+id/prod_not_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:lines="2"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="Product information not found \nCheck a different product"
            android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/product_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/prod_info_header">


        <LinearLayout
            android:id="@+id/product_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/prod_info_header">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_height="wrap_content"
                android:text="@string/product_name_title"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/prod_info_header"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/product_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="2dp"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/alert_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/product_layout">

            <TextView
                android:id="@+id/alert_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/alert_title"
                android:textSize="20sp"
                android:textColor="@color/blue"/>

            <TextView
                android:id="@+id/alert_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ingredients_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/alert_layout">

            <TextView
                android:id="@+id/ingredients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_title"
                android:textSize="20sp"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/blue"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/ingredients_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:ellipsize="marquee"
            android:gravity="start"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="@color/black"
            android:layout_marginHorizontal="15dp"
            />

        <TextView
            android:id="@+id/allergens_detected_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/allergens_detected_title_text"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_layout"
            />

        <TextView
            android:id="@+id/allergens_detected_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="2dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@+id/allergens_detected_title"
            />

    </LinearLayout>


    <Button
        android:id="@+id/scan_new_product_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:backgroundTint="@color/blue"
        android:text="@string/scan_new_button" />

    <Button
        android:id="@+id/search_new_product_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_new_button"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/home_button" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_button"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>
</ScrollView>